@@ -1,3 +1,8 @@
+*github-markup-1.2.1 (30 May 2014)
+
+  30 May 2014; Manuel Rüger <mrueg@gentoo.org> +github-markup-1.2.1.ebuild:
+  [dev-ruby/github-markup] Version bump.
+
 *github-markup-1.2.0 (21 Apr 2014)
 
   21 Apr 2014; Manuel Rüger <mrueg@gentoo.org> +github-markup-1.2.0.ebuild,
